Added FileResponse and image id list

--- a/backend-project/db_populate.ipynb
+++ b/backend-project/db_populate.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/all_findings_expert_labels/test_labels.csv\")"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "#conversion of labels\n",
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "try:\n",
@@ -1015,6 +1015,189 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"data/Data_Entry_2017_v2020.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "Base.metadata.create_all(bind=engine)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Image Index                    00000002_000.png\nFinding Labels                       No Finding\nFollow-up #                                   0\nPatient ID                                    2\nPatient Age                                  80\nPatient Gender                                M\nView Position                                PA\nOriginalImage[Width                        2500\nHeight]                                    2048\nOriginalImagePixelSpacing[x               0.171\ny]                                        0.171\nName: 3, dtype: object"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[3]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "picture_schema = {'picture_id': None,\n",
+    " 'patient_id': None,\n",
+    " 'Abnormal': False,\n",
+    " 'Atelectasis': False,\n",
+    " 'Cardiomegaly': False,\n",
+    " 'Effusion': False,\n",
+    " 'Infiltration': False,\n",
+    " 'Mass': False,\n",
+    " 'Nodule': False,\n",
+    " 'Pneumonia': False,\n",
+    " 'Pneumothorax': False,\n",
+    " 'Consolidation': False,\n",
+    " 'Edema': False,\n",
+    " 'Emphysema': False,\n",
+    " 'Fibrosis': False,\n",
+    " 'PleuralThickening': False,\n",
+    " 'Hernia': False,\n",
+    " 'Other': False}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Added 0 images\n",
+      "Added 1000 images\n",
+      "Added 2000 images\n",
+      "Added 3000 images\n",
+      "Added 4000 images\n",
+      "Added 5000 images\n",
+      "Added 6000 images\n",
+      "Added 7000 images\n",
+      "Added 8000 images\n",
+      "Added 9000 images\n",
+      "Added 10000 images\n",
+      "Added 11000 images\n",
+      "Added 12000 images\n",
+      "Added 13000 images\n",
+      "Added 14000 images\n",
+      "Added 15000 images\n",
+      "Added 16000 images\n",
+      "Added 17000 images\n",
+      "Added 18000 images\n",
+      "Added 19000 images\n",
+      "Added 20000 images\n",
+      "Added 21000 images\n",
+      "Added 22000 images\n",
+      "Added 23000 images\n",
+      "Added 24000 images\n",
+      "Added 25000 images\n",
+      "Added 26000 images\n",
+      "Added 27000 images\n",
+      "Added 28000 images\n",
+      "Added 29000 images\n",
+      "Added 30000 images\n",
+      "Added 31000 images\n",
+      "Added 32000 images\n",
+      "Added 33000 images\n",
+      "Added 34000 images\n",
+      "Added 35000 images\n",
+      "Added 36000 images\n",
+      "Added 37000 images\n",
+      "Added 38000 images\n",
+      "Added 39000 images\n",
+      "Added 40000 images\n",
+      "Added 41000 images\n",
+      "Added 42000 images\n",
+      "Added 43000 images\n",
+      "Added 44000 images\n",
+      "Added 45000 images\n",
+      "Added 46000 images\n",
+      "Added 47000 images\n",
+      "Added 48000 images\n",
+      "Added 49000 images\n",
+      "Added 50000 images\n",
+      "Added 51000 images\n",
+      "Added 52000 images\n",
+      "Added 53000 images\n",
+      "Added 54000 images\n",
+      "Added 55000 images\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    db = SessionLocal()\n",
+    "    i = 0\n",
+    "    for idx, row in df.iterrows():\n",
+    "        pic = picture_schema.copy()\n",
+    "        patient_id = row['Patient ID']\n",
+    "        pic['patient_id'] = patient_id\n",
+    "        pic['picture_id'] = row['Image Index']\n",
+    "        age = row['Patient Age']\n",
+    "        gender = row['Patient Gender']\n",
+    "        findings = row['Finding Labels'].split('|')\n",
+    "        for finding in findings:\n",
+    "            if finding == \"No Finding\":\n",
+    "                continue\n",
+    "            elif finding == \"Pleural Thickening\":\n",
+    "                pic['PluralThickening'] = True\n",
+    "            else:\n",
+    "                row[finding] = True\n",
+    "        if i % 1000 == 0:\n",
+    "            print(f'Added {i} images')\n",
+    "        i+= 1\n",
+    "        crud.populate_db(db,pic, patient_id, age, gender)\n",
+    "finally:\n",
+    "    db.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
