--- a/VAE/VAE.ipynb
+++ b/VAE/VAE.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2ceeb8d6",
+   "execution_count": 10,
+   "id": "ccb7d248",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c76cc7d",
+   "id": "374e7d7b",
    "metadata": {},
    "source": [
     "## Data Loading"
@@ -36,8 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "886efa7b",
+   "execution_count": 2,
+   "id": "0249c989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "89a6a9fe",
+   "execution_count": 3,
+   "id": "d42e15dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,8 +106,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9651d5e4",
+   "execution_count": 4,
+   "id": "5c73cc05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,8 +149,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3863c6aa",
+   "execution_count": 5,
+   "id": "166b30c1",
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f2b981",
+   "id": "41d9011c",
    "metadata": {},
    "source": [
     "## Data exploration"
@@ -169,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f2bd1a5e",
+   "execution_count": 5,
+   "id": "614af035",
    "metadata": {},
    "outputs": [
     {
@@ -191,8 +191,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "b906661e",
+   "execution_count": 6,
+   "id": "4b0a8331",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,8 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "05dfb613",
+   "execution_count": 7,
+   "id": "8d80b7a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,8 +265,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b7b1a3ea",
+   "execution_count": 8,
+   "id": "cc6e51a3",
    "metadata": {},
    "outputs": [
     {
@@ -293,8 +293,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "67dd9221",
+   "execution_count": 9,
+   "id": "50ffb5b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "559355c9",
+   "id": "60b6e506",
    "metadata": {
     "scrolled": true
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96c89295",
+   "id": "63428ed8",
    "metadata": {},
    "source": [
     "## AE"
@@ -429,8 +429,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "6c2f8044",
+   "execution_count": 6,
+   "id": "1df5546f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "68750e0d",
+   "id": "8fe63f05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,8 +612,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "f78b517e",
+   "execution_count": 7,
+   "id": "4d436492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,8 +685,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "1283b149",
+   "execution_count": 8,
+   "id": "52fd1689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,8 +716,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e80d4644",
+   "execution_count": 24,
+   "id": "fb21966d",
    "metadata": {
     "scrolled": true
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1779177",
+   "id": "96648847",
    "metadata": {},
    "source": [
     "## VAE"
@@ -785,8 +785,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "33aef36d",
+   "execution_count": 12,
+   "id": "50e5724d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,8 +826,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c848cac8",
+   "execution_count": 13,
+   "id": "70331e89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,8 +860,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8f254b1b",
+   "execution_count": 14,
+   "id": "acf525a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,6 +888,56 @@
     "        loss = recons_loss + kld_weight * kld_loss\n",
     "        return {'loss': loss, 'Reconstruction_Loss':recons_loss.detach(), 'KLD':-kld_loss.detach()}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "e62b5c3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNNVariationalEncoder(nn.Module):\n",
+    "    def __init__(self, img_dims, latent_dim):\n",
+    "        super().__init__()\n",
+    "\n",
+    "        self.encoder = nn.Sequential(\n",
+    "            nn.Conv2d(2,16, 5),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(16, 2, 5),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(1032256, 32),\n",
+    "            nn.ReLU(),\n",
+    "        )\n",
+    "        \n",
+    "        self.fc_mu = nn.Linear(32, latent_dim)\n",
+    "        self.fc_var = nn.Linear(32, latent_dim)\n",
+    "        \n",
+    "    \n",
+    "    def forward(self, input: Tensor, **kwargs) -> [Tensor]:\n",
+    "        \n",
+    "        #print(input.shape)\n",
+    "        batch_size = input.shape[0]\n",
+    "        #flat_images = input.view(batch_size, -1)\n",
+    "        \n",
+    "        encoded_result = self.encoder(input)\n",
+    "        mu = self.fc_mu(encoded_result)\n",
+    "        log_var = self.fc_var(encoded_result)\n",
+    "        \n",
+    "        # sample z\n",
+    "        std = torch.exp(log_var / 2)\n",
+    "        eps = torch.randn_like(std)\n",
+    "        z = mu + eps * std\n",
+    "        \n",
+    "        return z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "769796e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
