Added pytorch lightning training

--- a/VAE/Beta-VAE.ipynb
+++ b/VAE/Beta-VAE.ipynb
@@ -476,6 +476,7 @@
     "        \"\"\"\n",
     "        std = torch.exp(0.5 * logvar)\n",
     "        eps = torch.randn_like(std)\n",
+    "        #eps = torch.normal(0.0, 1.0, std.size())\n",
     "        return eps * std + mu\n",
     "\n",
     "    def forward(self, input: torch.Tensor, **kwargs) -> torch.Tensor:\n",
@@ -493,19 +494,19 @@
     "        log_var = args[3]\n",
     "\n",
     "        print(f'mu: {mu}')\n",
-    "        recons_loss = F.mse_loss(recons, input)\n",
+    "        recons_loss = F.binary_cross_entropy(recons, input)\n",
     "        print(f'recons_loss: {recons_loss}')\n",
     "        #why the sum factor?\n",
-    "        kl_loss = torch.mean(0.5 * torch.sum(torch.exp(log_var) + mu**2 - 1. - log_var, 1))\n",
-    "        #kld_loss = torch.mean(-0.5 * torch.sum(1 + log_var - mu ** 2 - log_var.exp(), dim = 1), dim = 0)\n",
-    "        print(f'kld_loss: {kl_loss}')\n",
+    "        #kl_loss = torch.mean(0.5 * torch.sum(torch.exp(log_var) + mu**2 - 1. - log_var, 1))\n",
+    "        kld_loss = torch.mean(-0.5 * torch.sum(1 + log_var - mu ** 2 - log_var.exp(), dim = 1), dim = 0)\n",
+    "        print(f'kld_loss: {kld_loss}')\n",
     "        if self.loss_type == 'H': # https://openreview.net/forum?id=Sy2fzU9gl\n",
-    "            loss = recons_loss - self.beta * kl_loss\n",
+    "            loss = recons_loss + self.beta * kld_loss\n",
     "            print(f'loss: {loss}')\n",
     "        elif self.loss_type == 'B': # https://arxiv.org/pdf/1804.03599.pdf\n",
     "            self.C_max = self.C_max.to(input.device)\n",
     "            C = torch.clamp(self.C_max/self.C_stop_iter * self.num_iter, 0, self.C_max.data[0])\n",
-    "            loss = recons_loss + self.gamma * (-kl_loss - C).abs()\n",
+    "            loss = recons_loss + self.gamma * (kld_loss - C).abs()\n",
     "        else:\n",
     "            raise ValueError('Undefined loss type.')\n",
     "\n",
