--- a/Process metadata CSV.ipynb
+++ b/Process metadata CSV.ipynb
@@ -3,29 +3,59 @@
   {
    "cell_type": "markdown",
    "id": "11ddb83f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Process metadata CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "a83ef3af",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'src.models.BetaVAEConv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<cell line: 7>\u001B[0;34m()\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mimport\u001B[39;00m \u001B[38;5;21;01mtorchvision\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mtransforms\u001B[39;00m \u001B[38;5;28;01mas\u001B[39;00m \u001B[38;5;21;01mT\u001B[39;00m\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mLightningVAE\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mconfig\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m config\n\u001B[0;32m----> 7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mLightningVAE\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodel_factory\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m get_model\n\u001B[1;32m      8\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mLightningVAE\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mhyperparameters\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m params\n\u001B[1;32m      9\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mitertools\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m tee\n",
+      "File \u001B[0;32m~/Medical1-xai-iml22/LightningVAE/src/utils/model_factory.py:2\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01msrc\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mBetaVAEConv\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m build_betavaeconv\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_model\u001B[39m(args, model_name, log_dir):\n\u001B[1;32m      5\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m model_name \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBetaVAEConv\u001B[39m\u001B[38;5;124m'\u001B[39m:\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'src.models.BetaVAEConv'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import umap.umap_ as umap\n",
-    "import joblib"
+    "#import umap.umap_ as umap\n",
+    "import joblib\n",
+    "import torchvision.transforms as T\n",
+    "from LightningVAE.config import config\n",
+    "from LightningVAE.src.utils.model_factory import get_model\n",
+    "from LightningVAE.src.models.hyperparameters import params\n",
+    "from itertools import tee"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "id": "4163f38a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"backend-project/data/HAM10000_metadata.csv\")"
@@ -34,7 +64,11 @@
   {
    "cell_type": "markdown",
    "id": "9bc36446",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "---\n",
     "## Populate with latent space coordinates"
@@ -42,20 +76,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "af38bb19",
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
+    "input_dim = params[config['model']]['input_dim']\n",
+    "batch_size = params[config['model']]['batch_size']\n",
+    "transform = T.Compose([T.Resize((input_dim, input_dim)), T.ToTensor()])\n",
+    "model_path = '/home/jimmy/Medical1-xai-iml22/LightningVAE/reports/logs/20220513-033014_BetaVAEConv/epoch=61-step=9734.ckpt'\n",
+    "pretrained_model = get_model(params[config['model']], config['model'], f'')\n",
+    "pretrained_model = pretrained_model.load_from_checkpoint(model_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "file_names = df['image_id'].tolist()\n",
+    "file_names = [f'{name}.jpg' for name in file_names]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "af38bb19",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import re\n",
+    "import os\n",
+    "from torch.utils.data import Dataset\n",
+    "\n",
     "#TODO\n",
-    "for i in range(12):\n",
-    "    df['latent_coordinate' + str(i)] = np.random.randint(-1000, 1000, df.shape[0])"
+    "file_names = df['image_id'].tolist()\n",
+    "file_names = [f'{name}.jpg' for name in file_names]\n",
+    "\n",
+    "class XRayDataset(Dataset):\n",
+    "    '''\n",
+    "    Class to represent our dataset of XRay images. Subclass of torch.utils.data.Dataset. Store the image directory,\n",
+    "    images name, bounding boxes and data of the images we will use either for training or testing.\n",
+    "    '''\n",
+    "\n",
+    "    def __init__(self, img_dir, images_name, transform=None):\n",
+    "        self.img_dir = img_dir\n",
+    "        # Read all the names of the PNG files in the directory\n",
+    "        images_dir = np.array([name for name in os.listdir(img_dir) if\n",
+    "                                os.path.isfile(os.path.join(img_dir, name)) and\n",
+    "                                (re.search('png$', name) is not None or re.search('jpg$', name) is not None)])\n",
+    "        print(len(images_name))\n",
+    "        self.images_name = images_name\n",
+    "        self.transform = transform\n",
+    "    def __len__(self):\n",
+    "        '''\n",
+    "        Overload: return the length of the dataset\n",
+    "\n",
+    "        Return\n",
+    "        ----------\n",
+    "        length: înt:\n",
+    "            The length of the dataset\n",
+    "        '''\n",
+    "        return self.images_name.shape[0]\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "\n",
+    "        img_path = os.path.join(self.img_dir, self.images_name[idx])\n",
+    "        img = Image.open(img_path)\n",
+    "        if self.transform:\n",
+    "            image = self.transform(img)\n",
+    "        return image"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "DataLoader(self.train_set, batch_size=self.batch_size, shuffle=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "id": "3a1dfd33",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "---\n",
     "## Populate with UMAP coordinates, and save UMAP model"
@@ -65,7 +194,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "02a18d74",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "latent_coordinates = df[['latent_coordinate' + str(i) for i in range(12)]]"
@@ -75,7 +208,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "2364d42a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Fit UMAP model\n",
@@ -87,7 +224,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "494230e8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -109,7 +250,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "f9c114ff",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get UMAP coordinates\n",
@@ -121,7 +266,11 @@
   {
    "cell_type": "markdown",
    "id": "0ad5c2de",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "---\n",
     "## Save CSV"
@@ -131,7 +280,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "82d978e9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -355,7 +508,11 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "92fd3926",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "df.to_csv(\"HAM10000_metadata_processed.csv\", index=False)"
