--- a/LightningVAE/Process metadata CSV.ipynb
+++ b/LightningVAE/Process metadata CSV.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "a83ef3af",
    "metadata": {
     "pycharm": {
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "input_dim = params[config['model']]['input_dim']\n",
     "batch_size = params[config['model']]['batch_size']\n",
     "transform = T.Compose([T.Resize((input_dim, input_dim)), T.ToTensor()])\n",
     "model_path = '/home/jimmy/Medical1-xai-iml22/LightningVAE/reports/logs/20220513-033014_BetaVAEConv/epoch=61-step=9734.ckpt'\n",
-    "file_dir = 'data/HAM10000/images'\n",
+    "file_dir = '/home/jimmy/Medical1-xai-iml22/backend-project/data/images'\n",
     "pretrained_model = get_model(params[config['model']], config['model'], f'')\n",
     "pretrained_model = pretrained_model.load_from_checkpoint(model_path)\n"
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "af38bb19",
    "metadata": {
     "pycharm": {
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "import torch"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "l = []\n",
@@ -354,7 +354,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(\"HAM10000_latent_space_processed.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "02a18d74",
    "metadata": {
     "pycharm": {
@@ -368,22 +382,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "id": "2364d42a",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Fit UMAP model\n",
     "import umap.umap_ as umap\n",
@@ -393,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "id": "494230e8",
    "metadata": {
     "pycharm": {
@@ -405,14 +411,14 @@
      "data": {
       "text/plain": "['umap.sav']"
      },
-     "execution_count": 45,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Serialize UMAP model\n",
-    "joblib.dump(reducer, \"umap.sav\")"
+    "joblib.dump(reducer, \"umap_3_9.sav\")"
    ]
   },
   {
