Fix projection bugs

--- a/LightningVAE/process_metadata.ipynb
+++ b/LightningVAE/process_metadata.ipynb
@@ -14,14 +14,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a83ef3af",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/antoine/miniconda3/envs/xai/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -38,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "4163f38a",
    "metadata": {
     "pycharm": {
@@ -732,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b91872dc",
    "metadata": {},
    "outputs": [],
@@ -742,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "02a18d74",
    "metadata": {
     "pycharm": {
@@ -1001,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "2364d42a",
    "metadata": {
     "pycharm": {
@@ -1012,13 +1021,13 @@
    "source": [
     "# Fit UMAP model\n",
     "import umap.umap_ as umap\n",
-    "reducer = umap.UMAP(n_neighbors=15, min_dist=0)\n",
+    "reducer = umap.UMAP(random_state=0, n_neighbors=15, min_dist=0)\n",
     "reducer = reducer.fit(latent_coordinates)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "494230e8",
    "metadata": {
     "pycharm": {
@@ -1029,22 +1038,22 @@
     {
      "data": {
       "text/plain": [
-       "['../backend-project/umap.sav']"
+       "['../backend-project/data/umap.sav']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Serialize UMAP model\n",
-    "joblib.dump(reducer, \"../backend-project/umap.sav\")"
+    "joblib.dump(reducer, \"../backend-project/data/umap.sav\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "f9c114ff",
    "metadata": {
     "pycharm": {
@@ -1074,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "82d978e9",
    "metadata": {
     "pycharm": {
@@ -1148,8 +1157,8 @@
        "      <td>-0.154920</td>\n",
        "      <td>-2.428411</td>\n",
        "      <td>-0.919434</td>\n",
-       "      <td>4.126091</td>\n",
-       "      <td>0.897999</td>\n",
+       "      <td>4.342072</td>\n",
+       "      <td>0.958916</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1172,8 +1181,8 @@
        "      <td>0.104617</td>\n",
        "      <td>-3.011379</td>\n",
        "      <td>0.209624</td>\n",
-       "      <td>6.954077</td>\n",
-       "      <td>-0.073107</td>\n",
+       "      <td>7.305955</td>\n",
+       "      <td>0.572881</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1196,8 +1205,8 @@
        "      <td>-0.258092</td>\n",
        "      <td>-2.620443</td>\n",
        "      <td>-0.472238</td>\n",
-       "      <td>4.430735</td>\n",
-       "      <td>0.916438</td>\n",
+       "      <td>4.423264</td>\n",
+       "      <td>1.271363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1220,8 +1229,8 @@
        "      <td>-0.483380</td>\n",
        "      <td>-2.758510</td>\n",
        "      <td>0.212307</td>\n",
-       "      <td>7.137584</td>\n",
-       "      <td>0.106229</td>\n",
+       "      <td>7.324741</td>\n",
+       "      <td>0.769176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1244,8 +1253,8 @@
        "      <td>0.426988</td>\n",
        "      <td>-2.219423</td>\n",
        "      <td>-3.214153</td>\n",
-       "      <td>2.976946</td>\n",
-       "      <td>3.221743</td>\n",
+       "      <td>2.893228</td>\n",
+       "      <td>3.097783</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1282,16 +1291,16 @@
        "4            -1.395048            -1.391270             0.426988   \n",
        "\n",
        "   latent_coordinate_10  latent_coordinate_11     umap1     umap2  \n",
-       "0             -2.428411             -0.919434  4.126091  0.897999  \n",
-       "1             -3.011379              0.209624  6.954077 -0.073107  \n",
-       "2             -2.620443             -0.472238  4.430735  0.916438  \n",
-       "3             -2.758510              0.212307  7.137584  0.106229  \n",
-       "4             -2.219423             -3.214153  2.976946  3.221743  \n",
+       "0             -2.428411             -0.919434  4.342072  0.958916  \n",
+       "1             -3.011379              0.209624  7.305955  0.572881  \n",
+       "2             -2.620443             -0.472238  4.423264  1.271363  \n",
+       "3             -2.758510              0.212307  7.324741  0.769176  \n",
+       "4             -2.219423             -3.214153  2.893228  3.097783  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "17a4bf16",
    "metadata": {
     "pycharm": {
